--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -1,4 +1,5 @@
-@import "tailwindcss";
+// https://github.com/nolimits4web/swiper/issues/7771
+@use "tailwindcss" as *;
 
 @layer utilities {
   /* Chrome, Safari and Opera */
