--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -34,7 +34,7 @@ html {
 body {
   position: relative;
   width: 100%;
-  color: #444444;
+  color: #c2c2c2;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Ubuntu, 'Helvetica Neue', sans-serif;
   background-color: #181717;
 }
